monoplanar fixed stray hud chars left after tty window resize

--- a/monoplanar_demo/Makefile
+++ b/monoplanar_demo/Makefile
@@ -28,7 +28,7 @@ MP_FILE_STEMS := \
 	Layout \
 	LinuxKbdInputMgr \
 	TtyWindowMgr \
-	TtyScreenBuffer \
+	TtyPixelBuffer \
 	sdl_unique_ptrs \
 	SdlWindowMgr \
 	SdlKbdInputMgr
