revised version preferences and annotation for SDL2 packages

--- a/utils/sdl2_smart_ptrs/CMakeLists.txt
+++ b/utils/sdl2_smart_ptrs/CMakeLists.txt
@@ -12,6 +12,17 @@ list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 include(InSourceBuildGuard)
 
-include(GetSDL2)
+include(GetSDL2Full)
+
+#[[
+foreach(lib
+    SDL2 SDL2_image SDL2_mixer
+    SDL2_net SDL2_ttf SDL2_rtf
+    )
+  string(TOLOWER "${lib}" lower_lib)
+  message("${lib}_FOUND: ${${lib}_FOUND}")
+  message("${lower_lib}_POPULATED: ${${lower_lib}_POPULATED}")
+endforeach()
+]]
 
 add_subdirectory(src)
